fix bug in sonar organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=Toru45_belajar-fundamental-front-end
-sonar.organization=Toru45
+sonar.organization=toru45
 sonar.projectName=submission-final-dicoding
 sonar.projectVersion=1.0
 
